--- a/pickle-ui/src/app/landing/landing/landing.component.html
+++ b/pickle-ui/src/app/landing/landing/landing.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <div class="calendar-container">
+  <div *ngFor="let court of courts">{{court.name}}</div>
   <full-calendar [options]="calendarOptions"></full-calendar>
 </div>
