--- a/pickle-ui/src/app/landing/landing/landing.component.html
+++ b/pickle-ui/src/app/landing/landing/landing.component.html
@@ -1,5 +1,4 @@
 <app-header></app-header>
 <div class="calendar-container">
-  <div *ngFor="let court of courts">{{court.name}}</div>
-  <full-calendar [options]="calendarOptions"></full-calendar>
+  <div *ngFor="let court of courts"><app-courtcalendar [court]="court"></app-courtcalendar></div>
 </div>
