--- a/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
+++ b/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
@@ -1,2 +1,7 @@
 <h3>{{court.name}}</h3>
-<full-calendar [options]="calendarOptions"></full-calendar>
+<div *ngIf="message">{{message}}</div>
+<div *ngIf="error" style="color: red">{{error}}</div>
+<div *ngIf="start">
+  <button (click)="book()">Book now</button>
+</div>
+<full-calendar *ngIf="calendarOptions" [options]="calendarOptions"></full-calendar>
