--- a/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
+++ b/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
@@ -3,5 +3,6 @@
 <div *ngIf="error" style="color: red">{{error}}</div>
 <div *ngIf="start">
   <button (click)="book()">Book now</button>
+  <button (click)="checkout()">Checkout now</button>
 </div>
 <full-calendar *ngIf="calendarOptions" [options]="calendarOptions"></full-calendar>
