--- a/pickle-ui/src/app/booking/booking/booking.component.html
+++ b/pickle-ui/src/app/booking/booking/booking.component.html
@@ -1,8 +1,7 @@
-<p>checkout works!</p>
 <div *ngIf="error" style="color: red">{{error}}</div>
-<div>Booking id: {{bookingId}}</div>
 
-<h3>Checkout details</h3>
+<section *ngIf="booking">
+<h3>Booking details</h3>
 <ul>
     <li>Date: {{booking?.start | date: 'MMMM d' }}</li>
     <li>Start: {{ booking?.start | date: 'h:mm a' }}</li>
@@ -10,7 +9,7 @@
     <li>Location: {{court?.org}}</li>
     <li>Court: {{court?.name}}</li>
     <li>Paid: {{booking?.paid ? 'Yes' : 'No'}}</li>
-    <li *ngIf="!booking?.paid"><button (click)="pay()">Pay now</button></li>
 </ul>
 
-<app-checkoutcalendar *ngIf="booking" [booking]="booking"></app-checkoutcalendar>
+<app-bookingcalendar *ngIf="booking" [booking]="booking"></app-bookingcalendar>
+</section>
