--- a/pickle-ui/src/app/sidebar/master/master.component.html
+++ b/pickle-ui/src/app/sidebar/master/master.component.html
@@ -1,18 +1,20 @@
 <section *ngIf="master">
 <h3>Courts</h3>
-<div>{{master|json}}</div>
 
 <div *ngFor="let org of master.orgs">
-    <h3>{{org.name}}</h3>
-    <ol>
-        <li *ngFor="let court of org.courts">
-            <div>            <input
-              type="checkbox"
-              (change)="onCheckUncheck(court, $event)"
-            />
-{{court.name}}</div>
-        </li>
-    </ol>
+  <h3>{{ org.name }}</h3>
+  <ol>
+    <li *ngFor="let court of org.courts">
+      <div>
+        <input
+          type="checkbox"
+          [checked]="isChecked(court.id)"
+          (change)="onCheckUncheck(court, $event)"
+        />
+        {{ court.name }}
+      </div>
+    </li>
+  </ol>
 </div>
 
 </section>
