--- a/pickle-ui/src/app/landing/landing/landing.component.html
+++ b/pickle-ui/src/app/landing/landing/landing.component.html
@@ -1,6 +1,6 @@
-<div class="flex-row">
+<div class="flex-row landing">
 <app-sidebar></app-sidebar>
-<div class="flex-row">
+<div class="calendar-container flex-row">
   <div *ngFor="let court of courts"><app-courtcalendar [court]="court"></app-courtcalendar></div>
 </div>
 </div>
