--- a/pickle-ui/src/app/header/login/login.component.html
+++ b/pickle-ui/src/app/header/login/login.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <!-- Show profile picture if logged in -->
-<div *ngIf="user">
+<div *ngIf="user" class="flex-row">
   <p>Welcome, {{ user.displayName }}</p>
   <img [src]="user.photoURL" alt="Profile Picture" width="50" height="50" />
   <button (click)="logout()">Logout</button>
