--- a/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
+++ b/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
@@ -5,4 +5,6 @@
   <button (click)="book()">Book now</button>
   <button (click)="checkout()">Checkout now</button>
 </div>
-<full-calendar *ngIf="calendarOptions" [options]="calendarOptions"></full-calendar>
+<div class="calendar-wrapper">
+  <full-calendar *ngIf="calendarOptions" [options]="calendarOptions"></full-calendar>
+</div>
