--- a/pickle-ui/src/app/landing/landing/landing.component.scss
+++ b/pickle-ui/src/app/landing/landing/landing.component.scss
@@ -3,6 +3,10 @@
   align-items: start;
   gap: 50px;
 }
+.calendar-controls {
+  justify-content: flex-start;
+  gap: 5px;
+}
 .calendar-container {
   gap: 26px;
 }
