--- a/pickle-ui/src/styles.scss
+++ b/pickle-ui/src/styles.scss
@@ -19,3 +19,5 @@
 .flex-grow {
   flex-grow: 1;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
