--- a/pickle-ui/src/app/landing/landing/landing.component.html
+++ b/pickle-ui/src/app/landing/landing/landing.component.html
@@ -1,14 +1,16 @@
 <div class="flex-row landing">
-<app-sidebar></app-sidebar>
-<div class="calendars-container flex-column">
+  <app-sidebar></app-sidebar>
+  <div class="calendars-container flex-column">
     <div class="calendar-controls flex-row">
-        <h1>{{ date | date: 'MMMM d, yyyy'}}</h1>
-        <button mat-flat-button matTooltip="Go to current day" (click)="today()">Today</button>
-        <button mat-flat-button matTooltip="Go back 1 day" (click)="previousDay()"><i class="fa fa-chevron-left"></i></button>
-        <button mat-flat-button matTooltip="Move forward 1 day" (click)="nextDay()"><i class="fa fa-chevron-right"></i></button>
+      <h1>{{ date | date: 'MMMM d, yyyy'}}</h1>
+      <button mat-flat-button matTooltip="Go to current day" (click)="today()">Today</button>
+      <button mat-flat-button matTooltip="Go back 1 day" (click)="previousDay()"><i class="fa fa-chevron-left"></i></button>
+      <button mat-flat-button matTooltip="Move forward 1 day" (click)="nextDay()"><i class="fa fa-chevron-right"></i></button>
     </div>
     <div class="calendar-container flex-row">
-      <div *ngFor="let court of courts"><app-courtcalendar [court]="court"></app-courtcalendar></div>
+      @for (court of courts; track court) {
+        <div><app-courtcalendar [court]="court"></app-courtcalendar></div>
+      }
     </div>
-</div>
+  </div>
 </div>
