--- a/pickle-ui/src/app/sidebar/master/master.component.html
+++ b/pickle-ui/src/app/sidebar/master/master.component.html
@@ -1,20 +1,24 @@
-<section *ngIf="master">
-<h3>Courts</h3>
-
-<div *ngFor="let org of master.orgs">
-  <h3>{{ org.name }}</h3>
-  <ol>
-    <li *ngFor="let court of org.courts">
+@if (master) {
+  <section>
+    <h3>Courts</h3>
+    @for (org of master.orgs; track org) {
       <div>
-        <input
-          type="checkbox"
-          [checked]="isChecked(court.id)"
-          (change)="onCheckUncheck(court, $event)"
-        />
-        {{ court.name }}
+        <h3>{{ org.name }}</h3>
+        <ol>
+          @for (court of org.courts; track court) {
+            <li>
+              <div>
+                <input
+                  type="checkbox"
+                  [checked]="isChecked(court.id)"
+                  (change)="onCheckUncheck(court, $event)"
+                  />
+                {{ court.name }}
+              </div>
+            </li>
+          }
+        </ol>
       </div>
-    </li>
-  </ol>
-</div>
-
-</section>
+    }
+  </section>
+}
