--- a/pickle-ui/src/app/booking/booking/booking.component.html
+++ b/pickle-ui/src/app/booking/booking/booking.component.html
@@ -1,18 +1,21 @@
-<div *ngIf="error" style="color: red">{{error}}</div>
+@if (error) {
+  <div style="color: red">{{error}}</div>
+}
 
-<section *ngIf="booking">
-<h3>Booking details</h3>
-<ul>
-    <li>Date: {{booking.start | date: 'MMMM d' }}</li>
-    <li>Start: {{ booking.start | date: 'h:mm a' }}</li>
-    <li>End: {{ booking.end | date: 'h:mm a' }}</li>
-    <li>Location: {{court?.org}}</li>
-    <li>Court: {{court?.name}}</li>
-    <li>Paid: {{booking.paid ? 'Yes' : 'No'}}</li>
-</ul>
-
-<app-bookingcalendar *ngIf="booking" [booking]="booking"></app-bookingcalendar>
-
-<a [routerLink]="['/landing']">Home</a>
-
-</section>
+@if (booking) {
+  <section>
+    <h3>Booking details</h3>
+    <ul>
+      <li>Date: {{booking.start | date: 'MMMM d' }}</li>
+      <li>Start: {{ booking.start | date: 'h:mm a' }}</li>
+      <li>End: {{ booking.end | date: 'h:mm a' }}</li>
+      <li>Location: {{court?.org}}</li>
+      <li>Court: {{court?.name}}</li>
+      <li>Paid: {{booking.paid ? 'Yes' : 'No'}}</li>
+    </ul>
+    @if (booking) {
+      <app-bookingcalendar [booking]="booking"></app-bookingcalendar>
+    }
+    <a [routerLink]="['/landing']">Home</a>
+  </section>
+}
