--- a/pickle-ui/src/app/components/bookingcalendar/bookingcalendar.component.html
+++ b/pickle-ui/src/app/components/bookingcalendar/bookingcalendar.component.html
@@ -1,3 +1,9 @@
-<div *ngIf="message">{{message}}</div>
-<div *ngIf="error" style="color: red">{{error}}</div>
-<full-calendar *ngIf="calendarOptions" [options]="calendarOptions"></full-calendar>
+@if (message) {
+  <div>{{message}}</div>
+}
+@if (error) {
+  <div style="color: red">{{error}}</div>
+}
+@if (calendarOptions) {
+  <full-calendar [options]="calendarOptions"></full-calendar>
+}
