--- a/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
+++ b/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
@@ -1,19 +1,10 @@
-<h2 matTooltip="{{date | date: 'MMMM d, yyyy'}}">{{court.name}} ({{court.org}})</h2>
-
-@if (message) {
-  <div>{{message}}</div>
-}
-@if (error) {
-  <div style="color: red">{{error}}</div>
-}
-@if (start) {
-  <div>
-    <button (click)="book()">Book now</button>
-    <button (click)="checkout()">Checkout now</button>
-  </div>
-}
+<h3>{{court.name}}</h3>
+<div *ngIf="message">{{message}}</div>
+<div *ngIf="error" style="color: red">{{error}}</div>
+<div *ngIf="start">
+  <button (click)="book()">Book now</button>
+  <button (click)="checkout()">Checkout now</button>
+</div>
 <div class="calendar-wrapper">
-  @if (calendarOptions) {
-    <full-calendar #fullcalendar [options]="calendarOptions"></full-calendar>
-  }
+  <full-calendar *ngIf="calendarOptions" [options]="calendarOptions"></full-calendar>
 </div>
