--- a/pickle-ui/src/app/checkout/checkoutcalendar/checkoutcalendar.component.html
+++ b/pickle-ui/src/app/checkout/checkoutcalendar/checkoutcalendar.component.html
@@ -1,9 +1,3 @@
-@if (message) {
-  <div>{{message}}</div>
-}
-@if (error) {
-  <div style="color: red">{{error}}</div>
-}
-@if (calendarOptions) {
-  <full-calendar [options]="calendarOptions"></full-calendar>
-}
+<div *ngIf="message">{{message}}</div>
+<div *ngIf="error" style="color: red">{{error}}</div>
+<full-calendar *ngIf="calendarOptions" [options]="calendarOptions"></full-calendar>
