--- a/pickle-ui/src/app/landing/landing/landing.component.html
+++ b/pickle-ui/src/app/landing/landing/landing.component.html
@@ -3,7 +3,7 @@
 <div class="calendars-container flex-column">
     <div class="calendar-controls flex-row">
         <h1>{{ date | date: 'MMMM d, yyyy'}}</h1>
-        <button mat-flat-button matTooltip="Go to current day" (click)="today()">Today</button>
+        <button mat-flat-button color="primary" matTooltip="Go to current day" (click)="today()">Today</button>
         <button mat-flat-button matTooltip="Go back 1 day" (click)="previousDay()"><i class="fa fa-chevron-left"></i></button>
         <button mat-flat-button matTooltip="Move forward 1 day" (click)="nextDay()"><i class="fa fa-chevron-right"></i></button>
     </div>
