try to recover from failed upgrade to angular 20

--- a/pickle-ui/src/app/landing/landing/landing.component.html
+++ b/pickle-ui/src/app/landing/landing/landing.component.html
@@ -8,7 +8,7 @@
         <button mat-flat-button matTooltip="Move forward 1 day" (click)="nextDay()"><i class="fa fa-chevron-right"></i></button>
     </div>
     <div class="calendar-container flex-row">
-      <div *ngFor="let court of courts"><app-courtcalendar [court]="court"></app-courtcalendar></div>
+      <div *ngFor="let court of courts"><app-courtcalendar [court]="court" [@fadeInOut]></app-courtcalendar></div>
     </div>
 </div>
 </div>
