--- a/pickle-ui/src/app/landing/landing/landing.component.html
+++ b/pickle-ui/src/app/landing/landing/landing.component.html
@@ -1,14 +1,22 @@
 <div class="flex-row landing">
 <app-sidebar></app-sidebar>
 <div class="calendars-container flex-column">
-    <div class="calendar-controls flex-row">
+    <div class="calendar-controls flex-row" *ngIf="!booking" @fadeIn>
         <h1>{{ date | date: 'MMMM d, yyyy'}}</h1>
         <button mat-flat-button color="primary" matTooltip="Go to current day" (click)="today()">Today</button>
         <button mat-flat-button matTooltip="Go back 1 day" (click)="previousDay()"><i class="fa fa-chevron-left"></i></button>
         <button mat-flat-button matTooltip="Move forward 1 day" (click)="nextDay()"><i class="fa fa-chevron-right"></i></button>
     </div>
+    <div class="checkout-container" *ngIf="booking" @fadeIn>
+      <h1>Checkout</h1>
+      <div>
+        <div>{{checkoutMessage}}</div>
+        <button mat-raised-button (click)="checkout()">Checkout now</button>
+        <button mat-flat-button (click)="cancel()">Cancel</button>
+      </div>
+    </div>
     <div class="calendar-container flex-row">
-      <div *ngFor="let court of courts"><app-courtcalendar [court]="court" [@fadeInOut]></app-courtcalendar></div>
+      <div *ngFor="let court of courts"><app-courtcalendar [court]="court" (slotSelected)="onSlotSelected(court, $event)" [@fadeInOut]></app-courtcalendar></div>
     </div>
 </div>
 </div>
