--- a/pickle-ui/src/app/sidebar/favorites/favorites.component.html
+++ b/pickle-ui/src/app/sidebar/favorites/favorites.component.html
@@ -6,6 +6,8 @@
         <div>
           <input
             type="checkbox"
+            [checked]="court.checked"
+            (change)="onCheckUncheck(court, $event)"
           />
           {{ court.name }} ({{court.org}})
         </div>
