--- a/pickle-ui/src/app/landing/landing/landing.component.html
+++ b/pickle-ui/src/app/landing/landing/landing.component.html
@@ -1,24 +1,31 @@
 <div class="flex-row landing">
 <app-sidebar></app-sidebar>
 <div class="calendars-container flex-column">
-    <div class="calendar-controls flex-row" *ngIf="!booking" @fadeIn>
-        <h1>{{ date | date: 'MMMM d, yyyy'}}</h1>
-        <button mat-flat-button color="primary" matTooltip="Go to current day" (click)="today()">Today</button>
-        <button mat-flat-button matTooltip="Go back 1 day" (click)="previousDay()"><i class="fa fa-chevron-left"></i></button>
-        <button mat-flat-button matTooltip="Move forward 1 day" (click)="nextDay()"><i class="fa fa-chevron-right"></i></button>
+  <div class="calendar-controls flex-row" *ngIf="!bookingRequest && !booking" @fadeIn>
+    <h1>{{ date | date: 'MMMM d, yyyy'}}</h1>
+    <button mat-flat-button color="primary" matTooltip="Go to current day" (click)="today()">Today</button>
+    <button mat-flat-button matTooltip="Go back 1 day" (click)="previousDay()"><i class="fa fa-chevron-left"></i></button>
+    <button mat-flat-button matTooltip="Move forward 1 day" (click)="nextDay()"><i class="fa fa-chevron-right"></i></button>
+  </div>
+  <app-slotcontrol
+    *ngIf="bookingRequest && court && selectionType === 'slot'"
+    [booking]="bookingRequest"
+    [court]="court"
+    (cancelEvent)="cancel()"
+    @fadeIn>
+  </app-slotcontrol>
+  <app-eventcontrol
+    *ngIf="booking && court && selectionType === 'event'"
+    [booking]="booking"
+    [court]="court"
+    (cancelEvent)="cancel()"
+    @fadeIn
+    >
+  </app-eventcontrol>
+  <div class="calendar-container flex-row">
+    <div *ngFor="let court of courts$ | async">
+      <app-courtcalendar [court]="court" (slotSelected)="onSlotSelected(court, $event)" (eventSelected)="onEventSelected(court, $event)" [@fadeInOut]></app-courtcalendar>
     </div>
-    <div class="checkout-container" *ngIf="booking" @fadeIn>
-      <h1>Checkout</h1>
-      <div class="flex-col gap5">
-        <div>{{checkoutMessage}}</div>
-        <div class="flex-row gap5 alignleft">
-          <button mat-raised-button color="accent" (click)="checkout()">Checkout now</button>
-          <button mat-flat-button color="default" (click)="cancel()">Cancel</button>
-        </div>
-      </div>
-    </div>
-    <div class="calendar-container flex-row">
-      <div *ngFor="let court of courts$ | async"><app-courtcalendar [court]="court" (slotSelected)="onSlotSelected(court, $event)" [@fadeInOut]></app-courtcalendar></div>
-    </div>
+  </div>
 </div>
 </div>
