--- a/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
+++ b/pickle-ui/src/app/components/courtcalendar/courtcalendar.component.html
@@ -3,7 +3,7 @@
     <i *ngIf="!favorite" class="fa-regular fa-star pointer" matTooltip="Add to favorites" (click)="addToFavorites()"></i>
     <i *ngIf="favorite" class="fa-solid fa-star pointer gold" matTooltip="Remove from favorites" (click)="removeFromFavorites()" [class.spin]="spinning"></i>
 </h2>
-
+<div>Schedule: {{schedStart}} to {{schedEnd}}</div>
 <div *ngIf="message">{{message}}</div>
 <div *ngIf="error" style="color: red">{{error}}</div>
 <div class="calendar-wrapper">
