--- a/pickle-ui/src/app/landing/eventcontrol/eventcontrol.component.html
+++ b/pickle-ui/src/app/landing/eventcontrol/eventcontrol.component.html
@@ -10,8 +10,8 @@
       <button mat-flat-button (click)="backToCalendar()">Back to calendar</button>
     </div>
     <div *ngIf="!booking.paid" class="flex-column gap5 alignleft">
-      <p *ngIf="owner">This is an unconfirmed booking. You created it {{fromNow(booking.createdDate)}}. Unpaid bookings will be cancelled by the system after 15 minutes.</p>
-      <p *ngIf="!owner">This is an unconfirmed booking created {{fromNow(booking.createdDate)}}. Unpaid bookings will be cancelled by the system after 15 minutes.</p>
+      <p *ngIf="owner">This is an unconfirmed booking. You created it {{fromNow(booking.createdDate)}}. Unpaid bookings will be cancelled by the system after {{unpaidBookingsTtlInMinutes}} minutes.</p>
+      <p *ngIf="!owner">This is an unconfirmed booking created {{fromNow(booking.createdDate)}}. Unpaid bookings will be cancelled by the system after {{unpaidBookingsTtlInMinutes}} minutes.</p>
       <div class="flex-row gap5 alignleft">
         <button *ngIf="owner" mat-raised-button color="accent" (click)="checkout()">Checkout now</button>
         <button *ngIf="owner" mat-flat-button color="default" (click)="cancel()">Cancel booking</button>
