deployed angular app

--- a/pickle-ui/src/app/header/header/header.component.scss
+++ b/pickle-ui/src/app/header/header/header.component.scss
@@ -1,7 +1,7 @@
 .banner {
   background-image: url('https://i.imgur.com/O1LGExu.png');
-  background-size: stretch;
-  background-position: center 40%;
+  background-size: auto;
+  background-position: center 45%;
   background-repeat: no-repeat;
-  height: 100px;
+  height: 300px;
 }
