--- a/pickle-ui/src/app/header/header/header.component.scss
+++ b/pickle-ui/src/app/header/header/header.component.scss
@@ -1,7 +1,7 @@
 .banner {
-  background-image: url('https://i.imgur.com/O1LGExu.png');
-  background-size: auto;
+  background-image: url('https://i.imgur.com/iKWVrUj.png');
+  background-size: 30%;  
   background-position: center 45%;
   background-repeat: no-repeat;
-  height: 300px;
+  height: 150px;
 }
