convert TTL from string to Date

--- a/pickle-ui/src/app/checkout/checkout/checkout.component.html
+++ b/pickle-ui/src/app/checkout/checkout/checkout.component.html
@@ -2,22 +2,24 @@
 
 <div>
   <h3>Booking details</h3>
-  <div *ngIf="booking" class="details">
-    <div><strong>Date</strong></div><div>{{booking.start | date: 'MMMM d' }}</div>
-    <div><strong>Start</strong></div><div>{{ booking.start | date: 'h:mm a' }}</div>
-    <div><strong>End</strong></div><div>{{ booking.end | date: 'h:mm a' }}</div>
-    <div><strong>Location</strong></div><div>{{court?.org}}</div>
-    <div><strong>Court</strong></div><div>{{court?.name}}</div>
-    <div><strong>Paid</strong></div><div>{{booking.paid ? 'Yes' : 'No'}}</div>
-    <div *ngIf="!booking.paid" class="flex-row gap5 alignleft" style="grid-column: 1 / -1;">
-      <button mat-raised-button (click)="pay()">Pay now</button>
-      <button mat-flat-button (click)="cancel()">Cancel Booking</button>
-      <button mat-flat-button routerLink="/landing">Back to calendar</button>
+  <ng-container *ngIf="booking">
+    <div class="details">
+      <div><strong>Date</strong></div><div>{{booking.start | date: 'MMMM d' }}</div>
+      <div><strong>Start</strong></div><div>{{ booking.start | date: 'h:mm a' }}</div>
+      <div><strong>End</strong></div><div>{{ booking.end | date: 'h:mm a' }}</div>
+      <div><strong>Location</strong></div><div>{{court?.org}}</div>
+      <div><strong>Court</strong></div><div>{{court?.name}}</div>
+      <div><strong>Paid</strong></div><div>{{booking.paid ? 'Yes' : 'No'}}</div>
+      <div *ngIf="!booking.paid" class="flex-row gap5 alignleft" style="grid-column: 1 / -1;">
+        <button mat-raised-button (click)="pay()">Pay now</button>
+        <button mat-flat-button (click)="cancel()">Cancel Booking</button>
+        <button mat-flat-button routerLink="/landing">Back to calendar</button>
+      </div>
     </div>
-  </div>
+    <p *ngIf="!booking.paid">This booking is created and will be confirmed upon payment. Unpaid bookings will be cancelled by the system after {{unpaidBookingsTtlInMinutes}} minutes</p>
+  </ng-container>
   <div *ngIf="error" style="color: red">{{error}}</div>
   <div *ngIf="message">{{message}}</div>
-  <p>This booking is created and will be confirmed upon payment. Unpaid bookings will be cancelled by the system after {{unpaidBookingsTtlInMinutes}} minutes</p>
 </div>
 
 <div class="calendar-wrapper">
