--- a/pickle-ui/src/app/header/header/header.component.html
+++ b/pickle-ui/src/app/header/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="flex-row banner">
-  <div>Welcome to Dumaget-me</div>
+<div class="flex-row banner pointer" routerLink="/">
+  <div></div>
   <app-login></app-login>
 </div>
