handle unauthorized access to booking page

--- a/pickle-ui/src/app/header/login/login.component.html
+++ b/pickle-ui/src/app/header/login/login.component.html
@@ -1,6 +1,6 @@
 <!-- Show login buttons if NOT logged in -->
 <div *ngIf="!user">
-  <button (click)="loginWithGoogle()">Login with Google</button>
+  <button (click)="loginWithGoogle($event)">Login with Google</button>
   <button (click)="loginWithFacebook()">Login with Facebook</button>
 </div>
 
