--- a/pickle-ui/src/app/header/header/header.component.html
+++ b/pickle-ui/src/app/header/header/header.component.html
@@ -1,4 +1,8 @@
-<div class="flex-row banner pointer" routerLink="/">
-  <div></div>
-  <app-login></app-login>
+<div class="header-container">
+  <div class="left-spacer"></div>
+  <div class="banner pointer" routerLink="/landing">
+  </div>
+  <div class="login">
+    <app-login></app-login>
+  </div>
 </div>
