--- a/pickle-ui/src/app/header/header/header.component.scss
+++ b/pickle-ui/src/app/header/header/header.component.scss
@@ -1,7 +1,34 @@
+.header-container {
+  display: flex;
+  align-items: center;
+  padding: 0 1rem;
+  height: 200px; /* set height as needed */
+}
+
+.left-spacer,
+.login {
+  flex: 1;
+}
+
+.login {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .banner {
+  flex: 0 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
   background-image: url('https://i.imgur.com/iKWVrUj.png');
-  background-size: 30%;  
-  background-position: center 45%;
+  background-size: 40%;  
+  background-position: center 0%;
   background-repeat: no-repeat;
-  height: 150px;
+  height: 200px;
+}
+
+.banner img {
+  max-height: 40px;
+  object-fit: contain;
 }
