--- a/pickle-ui/src/app/landing/landing/landing.component.html
+++ b/pickle-ui/src/app/landing/landing/landing.component.html
@@ -23,7 +23,7 @@
     >
   </app-eventcontrol>
   <div class="calendar-container flex-row">
-    <div *ngFor="let court of courts$ | async">
+    <div *ngFor="let court of courts$ | async" class="calendar-sub-container">
       <app-courtcalendar [court]="court" [date]="date" (slotSelected)="onSlotSelected(court, $event)" (eventSelected)="onEventSelected(court, $event)" [@fadeInOut]></app-courtcalendar>
     </div>
   </div>
