--- a/pickle-ui/src/app/header/header/header.component.scss
+++ b/pickle-ui/src/app/header/header/header.component.scss
@@ -3,6 +3,9 @@
   align-items: center;
   padding: 0 1rem;
   height: 200px; /* set height as needed */
+  background-image: url('https://i.imgur.com/iKWVrUj.png');
+  background-position: center 0%;
+  background-repeat: no-repeat;
 }
 
 .left-spacer,
@@ -21,22 +24,19 @@
   justify-content: center;
   align-items: center;
   width: 65%;
-  background-image: url('https://i.imgur.com/iKWVrUj.png');
-  background-position: center 0%;
-  background-repeat: no-repeat;
   height: 200px;
 }
 
 @media (min-width: 1024px) {
   //wide banner
-  .banner {
-    background-size: 40%;
+  .header-container {
+    background-size: 25%;
   }
 }
 @media (max-width: 1024px) {
   //mobile banner
-  .banner {
-    background-size: 120%;
+  .header-container {
+    background-size: 80%;
   }
 }
 
