--- a/pickle-ui/src/app/checkout/checkout/checkout.component.html
+++ b/pickle-ui/src/app/checkout/checkout/checkout.component.html
@@ -1,7 +1,7 @@
 <div class="flex-row checkout">
 
-<div>
-  <h3>Booking details</h3>
+<div class="p-4">
+  <h1>Booking details</h1>
   <ng-container *ngIf="booking">
     <div class="details">
       <div><strong>Date</strong></div><div>{{booking.start | date: 'MMMM d' }}</div>
