--- a/pickle-ui/src/app/sidebar/favorites/favorites.component.html
+++ b/pickle-ui/src/app/sidebar/favorites/favorites.component.html
@@ -1,22 +1,21 @@
-<ng-container *ngIf="!anonymous">
+<section class="p-1" *ngIf="!anonymous">
 
-<h3>Favorites</h3>
-<div *ngIf="!favorites || favorites.length == 0">No favorites added</div>
-<div *ngIf="favorites && favorites.length > 0">
-    <ol>
-      <li *ngFor="let court of favorites">
-        <div>
-          <input
-            type="checkbox"
-            [checked]="court.checked"
-            (change)="onCheckUncheck(court, $event)"
-          />
-          {{ court.name }} ({{court.org}})
-        </div>
-      </li>
-    </ol>
+<h3 class="text-l font-bold">Favorites</h3>
+
+<div *ngIf="!favorites || favorites.length === 0">
+  No favorites added
 </div>
 
+<mat-list *ngIf="favorites && favorites.length > 0">
+  <mat-list-item *ngFor="let court of favorites">
+    <mat-checkbox
+      [checked]="court.checked"
+      (change)="onCheckUncheck(court, $event)"
+    >
+      {{ court.name }} ({{ court.org }})
+    </mat-checkbox>
+  </mat-list-item>
+</mat-list>
 
 
 
@@ -27,4 +26,5 @@
 
 
 
-</ng-container>
+
+</section>
